fix: Header component with dark mode switch

--- a/3-Portfolio/src/components/Header/Header.module.css
+++ b/3-Portfolio/src/components/Header/Header.module.css
@@ -29,6 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 2rem;
 
 }
 
@@ -36,5 +37,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 1.8rem;
+    gap: 1rem;
+}
+
+.darkMode{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
 }
